# UniAccess

./: .gitignore  00001.vcf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  Makefile  NOTICE  README.md  REVENUE_SHARING.md  atspi_backend.py  config.py  input_listener.py  lancer_nvda_linux.bat  lancer_nvda_linux.sh  main.py  nvda_linux.txt  pyproject.toml  pytest.ini  requirements.txt  requirements_linux.txt  requirements_windows.txt  setup.py  speech_backend.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: accessibility_issue.md  bug_report.md  feature_request.md  leadership_application.md  leadership_interest.md
.github/workflows/: ci.yml
android/: AccessibilityServiceSkeleton.java  README_android.md  main.py  requirements_android.txt
docs/: COLLABORATION_AGREEMENT.md  LEGAL_PROTECTION.md  api.md  architecture.md  contributing.md  examples.md  guide_avance.md  guide_installation.md  ia_autonome.md  leadership.md  prototype_ia.md  roadmap_leadership.md
nvda_android/: __init__.py
nvda_android/apps/: __init__.py  accessibility.py  content.py  input_method.py  notification.py  system.py  user.py  widget.py
nvda_android/apps/accessibility/: talkback.py
nvda_android/apps/content/: gallery.py
nvda_android/apps/input_method/: keyboard.py
nvda_android/apps/notification/: system_notification.py
nvda_android/apps/service/: background_service.py
nvda_android/apps/system/: settings.py  system_apps.py
nvda_android/apps/user/: browser.py
nvda_android/apps/widget/: clock.py
nvda_linux/: __init__.py
nvda_linux/ai/: ar.py  nlp.py  vision.py
nvda_linux/apps/browsers/: __init__.py  chrome.py  edge.py  electron.py  firefox.py
nvda_linux/apps/editors/: __init__.py  gedit.py  kate.py  vscode.py
nvda_linux/apps/games/: __init__.py  native.py  proton.py  wine.py
nvda_linux/apps/mail/: __init__.py  evolution.py  geary.py  kmail.py  thunderbird.py
nvda_linux/apps/media/: __init__.py  amarok.py  mpv.py  rhythmbox.py  vlc.py
nvda_linux/apps/office/: __init__.py  libreoffice.py  msoffice.py  onlyoffice.py
nvda_linux/apps/terminals/: __init__.py  gnome_terminal.py  konsole.py  terminator.py  xterm.py
nvda_linux/core/: config.py
src/: atspi_backend.py  config.py  input_listener.py  main.py  speech_backend.py
tests/: conftest.py  test_basic.py  test_minimal.py
tests/accessibility/: __init__.py  test_accessibility.py  test_ai.py  test_braille.py  test_haptic.py  test_spatial_audio.py
tests/integration/: __init__.py  test_android.py  test_editors.py  test_office.py
tests/unit/: __init__.py  test_atspi.py  test_config.py  test_input.py  test_speech.py
